--- a/src/components/Themes.css
+++ b/src/components/Themes.css
@@ -66,7 +66,7 @@
     line-height: 1.6;
   }
   
-  .close-btn {
+  .closes-btn {
     background-color: #137371;
     color: white;
     padding: 10px 20px;
@@ -77,7 +77,7 @@
     font-size: 16px;
   }
   
-  .close-btn:hover {
+  .closes-btn:hover {
     background-color: #105f4b;
   }
   
